# scara_plotter

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  curve.c  curve.h  data_structs.c  data_structs.h  fixed_point.h  interpolation.c  interpolation.h  main.c  manipulator.c  manipulator.h  polynomial.c  polynomial.h
include/: curve.h  data_structs.h  debug.h  fixed_point.h  integration.h  interpolation.h  manipulator.h  path.h  polynomial.h  trajectory.h
src/: CMakeLists.txt  curve.c  data_structs.c  fixed_point.c  integration.c  interpolation.c  main.c  manipulator.c  path.c  polynomial.c  trajectory.c
